...
      }
    },
    "1 Minute" : {
      "comment" : "Text displayed in a picker view for a 1-minute interval.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "2 Minutes" : {
      "comment" : "Text displayed in a picker view for a 2-minute interval.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Active Reminders" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Analytics" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Articles" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "de" : {
...

    },
    "Close" : {
      "localizations" : {
        "de" : {
...

    },
    "Community" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Connect to Apple Health" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Continue" : {
      "localizations" : {
        "de" : {
...

    },
    "Create" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Create Reflection" : {
      "localizations" : {
        "de" : {
...

    },
    "Delete" : {
      "localizations" : {
        "de" : {
...

    },
    "Delete Reflection" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Delete Reminder" : {
      "localizations" : {
        "de" : {
...

    },
    "Device Mode" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Disable Activity Promoting Features" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Disclaimer" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Done" : {
      "comment" : "A button label that confirms the user's selection.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Edit Reflection" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Edit Reminder" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Finish" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Get Started" : {

    },
...
      }
    },
    "Heart Rate" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Home" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "How are you feeling?" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "I Understand and Accept" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Light" : {
      "localizations" : {
        "de" : {
...

    },
    "Main Features" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Mode of Use" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Movement" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Outreach" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Release Notes" : {

    },
...
      }
    },
    "Reminders" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Review Reminder" : {

    },
    "Roadmap" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Save" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Selected Date" : {
      "comment" : "A label for the selected date in the analytics view.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Settings" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Show All" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Skip" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Steps" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "This Week" : {
      "extractionState" : "manual",
      "localizations" : {
...
